# AccountsAndTransactionsView

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-desktop.yml  deploy-pwa.yml
scripts/: gen-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/app/ai/: mockAI.ts
src/app/components/: AIActionPanel.tsx  BottomNav.tsx  CommandBar.tsx  CustomCursor.tsx  Layout.tsx  MobileHeader.tsx  MobileMenu.tsx  Sidebar.tsx
src/app/data/: sample.ts
src/app/lib/: memoryParser.ts
src/app/pages/: Agents.tsx  DesignLanguage.tsx  Documents.tsx  Finance.tsx  Home.tsx  Learning.tsx  Memories.tsx  Moodboards.tsx  Opportunities.tsx  ProjectDetail.tsx  Projects.tsx  Prompts.tsx  Therapy.tsx
src/app/store/: AppContext.tsx
src/app/types/: index.ts
src/imports/PcmaTrue-1/: PcmaTrue.tsx  svg-x7gn6y99v6.ts
src/imports/PrimaryExploration/: PrimaryExploration.tsx  PrimaryExploration.tsx.backup  svg-agoev.tsx
src/styles/: ibra-os.css  index.css  theme.css
