[package]
name = "ibra-os"
version = "0.1.0"
description = "Ibra OS — Personal Creative Operating System"
authors = ["Ibra Balogun"]
edition = "2021"

[lib]
name = "ibra_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
